sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:30: error: ')' expected but ';' found.
      if (setValeur(dernier, v);
                               ^